--- a/src/pages/blog/2019-08-07-kiriya.md
+++ b/src/pages/blog/2019-08-07-kiriya.md
@@ -8,13 +8,11 @@ featuredimage: /img/img_1839.jpg
 tags:
   - ラーメン　レストラン
 ---
+![kiriya](/img/img_1839.jpg)
+
 開店時間に行ったのですが、出遅れたようで30分待ちました。
 
-駐車場も近くに何台かあるので車で行けます。
-
-
-
-
+駐車場も近くに何台かあるので車で行けます。<hr>
 
 The Noodles & Saloon Kiriya （ザ ヌードルズ＆サルーン キリヤ）
 
