Update Blog “2019-08-07-kiriya”

--- a/src/pages/blog/2019-08-07-kiriya.md
+++ b/src/pages/blog/2019-08-07-kiriya.md
@@ -6,7 +6,9 @@ description: 行列のできるラーメン屋さん
 featuredpost: true
 featuredimage: /img/img_1839.jpg
 tags:
-  - ラーメン　レストラン
+  - 食べる
+  - ラーメン
+  - レストラン
 ---
 ![kiriya](/img/img_1839.jpg)
 
